[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Matt McHugh <mchughmk@gmail.com>"]
packages = [
    { include = "day1" }
]

[tool.poetry.scripts]
day1 = "day1.day1:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
