[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Matt McHugh <mchughmk@gmail.com>"]
packages = [
    { include = "day1" },
    { include = "day2" },
    { include = "day3" },
    { include = "day4" },
    { include = "day5" },
    { include = "day6" }
]

[tool.poetry.scripts]
day1 = "day1.day1:main"
day2 = "day2.day2:main"
day3 = "day3.day3:main"
day4 = "day4.day4:main"
day5 = "day5.day5:main"
day6 = "day6.day6:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
